# Copyright 2023 Greptime Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
[lib]
crate-type = ["cdylib"]

[package]
name = "promql-parser"
readme = "README.md"
description = "Parse PromQL query into AST"
repository = "https://github.com/GreptimeTeam/promql-parser"
version = "0.4.3"
edition = "2021"
authors = ["The GreptimeDB Project Developers"]
keywords = ["prometheus", "promql", "parser"]
license = "Apache-2.0"
categories = ["parser-implementations"]

[dependencies]
mlua = { version = "0.10.2", features = ["lua54","module"] }
cfgrammar = "0.13.5"
chrono = "0.4.38"
lazy_static = "1.4.0"
lrlex = "0.13.5"
lrpar = "0.13.5"
regex = "1"
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

[features]
default = ["ser"]
ser = ["serde", "serde_json"]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]

[build-dependencies]
mlua = { version = "0.10.2", features = ["module"] }
cfgrammar = "0.13.5"
lrlex = "0.13.5"
lrpar = "0.13.5"
